--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </div>
           <div class="content">
             <h3>Yakuza Kiwami 2</h3>
-            <p><strong>Культовий ремейк на оновленному рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.</p>
+            <p><strong>Культовий ремейк на оновленому рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.</p>
             <div class="progress" title="Готовність 45%"><span style="width:45%"></span></div>
             <small style="color:var(--muted)">Готовність: <strong>45%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
