--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
       <div class="grid">
         <article class="card glass">
           <div class="thumb">
-            <img src="assets/judgment_takayuki.webp" alt="Такаюкі Яґамі (Judgment)">
-            <img class="logo" src="assets/judgment_logo.png" alt="Логотип Judgment">
+            <img src="assets/judgment_takayuki.webp">
+            <img class="logo" src="assets/judgment_logo.png">
             <span class="badge">У процесі локалізації</span>
           </div>
           <div class="content">
@@ -251,8 +251,8 @@
 
         <article class="card glass">
           <div class="thumb">
-            <img src="assets/lost_judgment.webp" alt="Такаюкі Яґамі (Lost Judgment)">
-            <img class="logo" src="assets/lost_judgment_logo.png" alt="Логотип Lost Judgment">
+            <img src="assets/lost_judgment.webp">
+            <img class="logo" src="assets/lost_judgment_logo.png">
             <span class="badge">Збір на локалізацію</span>
           </div>
           <div class="content">
@@ -268,8 +268,8 @@
 
         <article class="card glass">
           <div class="thumb">
-            <img src="assets/yakuza_kiwami2.webp" alt="Yakuza Kiwami 2">
-            <img class="logo" src="assets/yakuza_kiwami2_logo.png" alt="Логотип Yakuza Kiwami 2">
+            <img src="assets/yakuza_kiwami2.webp">
+            <img class="logo" src="assets/yakuza_kiwami2_logo.png">
             <span class="badge">У процесі локалізації</span>
           </div>
           <div class="content">
@@ -283,8 +283,8 @@
 
         <article class="card glass">
           <div class="thumb">
-            <img src="assets/yakuza_3_remastered.webp" alt="Yakuza 3 Remastered">
-            <img class="logo" src="assets/yakuza3_logo.png" alt="Логотип Yakuza 3 Remastered">
+            <img src="assets/yakuza_3_remastered.webp">
+            <img class="logo" src="assets/yakuza3_logo.png">
             <span class="badge">У процесі локалізації</span>
           </div>
           <div class="content">
@@ -298,8 +298,8 @@
 
         <article class="card glass">
           <div class="thumb">
-            <img src="assets/no_more_heroes_travis.webp" alt="Travis Touchdown — No More Heroes (2007)">
-            <img class="logo" src="assets/no_more_heroes_logo.png" alt="Логотип No More Heroes">
+            <img src="assets/no_more_heroes_travis.webp">
+            <img class="logo" src="assets/no_more_heroes_logo.png">
             <span class="badge">У процесі локалізації</span>
           </div>
           <div class="content">
@@ -313,8 +313,8 @@
 
         <article class="card glass">
           <div class="thumb">
-            <img src="assets/no_more_heroes_2.webp" alt="No More Heroes 2: Desperate Struggle">
-            <img class="logo" src="assets/no_more_heroes2_logo.png" alt="Логотип No More Heroes 2: Desperate Struggle">
+            <img src="assets/no_more_heroes_2.webp">
+            <img class="logo" src="assets/no_more_heroes2_logo.png">
             <span class="badge">У процесі малювання та тестування</span>
           </div>
           <div class="content">
@@ -328,8 +328,8 @@
 
         <article class="card glass">
           <div class="thumb">
-            <img src="assets/travis_strikes_again.webp" alt="Travis Strikes Again: No More Heroes">
-            <img class="logo" src="assets/travis_strikes_again_logo.png" alt="Логотип Travis Strikes Again: No More Heroes">
+            <img src="assets/travis_strikes_again.webp">
+            <img class="logo" src="assets/travis_strikes_again_logo.png">
             <span class="badge">У процесі локалізації</span>
           </div>
           <div class="content">
@@ -343,8 +343,8 @@
 
         <article class="card glass">
           <div class="thumb">
-            <img src="assets/no_more_heroes_3.webp" alt="No More Heroes 3">
-            <img class="logo" src="assets/no_more_heroes3_logo.png" alt="Логотип No More Heroes 3">
+            <img src="assets/no_more_heroes_3.webp">
+            <img class="logo" src="assets/no_more_heroes3_logo.png">
             <span class="badge">У процесі локалізації</span>
           </div>
           <div class="content">
