--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           <div class="content">
             <h3>Lost Judgment</h3>
             <p><strong>Продовження неонуарної історії про детектива Яґамі.</strong> Йде добровільний збір на локалізацію гри.</p>
-            <div class="progress" title="Прогрес 0%"><span style="width:0%"></span></div>
+            <div class="progress" title="Готовність 0%"><span style="width:0%"></span></div>
             <small style="color:var(--muted)">Статус: <strong>збір коштів</strong></small>
             <div class="cta">
               <a class="btn primary" href="https://donatello.to/LittleBitUA" target="_blank" rel="noopener">Спонсорувати</a>
@@ -305,8 +305,8 @@
           <div class="content">
             <h3>No More Heroes</h3>
             <p><strong>Перша та неповторна пригода Тревіса Тачдауна.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
-            <div class="progress" title="Прогрес 80%"><span style="width:80%"></span></div>
-            <small style="color:var(--muted)">Прогрес: <strong>80%</strong></small>
+            <div class="progress" title="Готовність 80%"><span style="width:80%"></span></div>
+            <small style="color:var(--muted)">Готовність: <strong>80%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
@@ -320,8 +320,8 @@
           <div class="content">
             <h3>No More Heroes 2: Desperate Struggle</h3>
             <p><strong>Ще більше стилю та боїв!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
-            <div class="progress" title="Прогрес 100%"><span style="width:100%"></span></div>
-            <small style="color:var(--muted)">Прогрес: <strong>100%</strong></small>
+            <div class="progress" title="Готовність 100%"><span style="width:100%"></span></div>
+            <small style="color:var(--muted)">Готовність: <strong>100%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
@@ -335,8 +335,8 @@
           <div class="content">
             <h3>Travis Strikes Again: No More Heroes</h3>
              <p><strong>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
-            <div class="progress" title="Прогрес 17%"><span style="width:17%"></span></div>
-            <small style="color:var(--muted)">Прогрес: <strong>17%</strong></small>
+            <div class="progress" title="Готовність 21%%"><span style="width:21%"></span></div>
+            <small style="color:var(--muted)">Готовність: <strong>21%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
@@ -350,8 +350,8 @@
           <div class="content">
             <h3>No More Heroes 3</h3>
             <p><strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
-            <div class="progress" title="Прогрес 80%"><span style="width:80%"></span></div>
-            <small style="color:var(--muted)">Прогрес: <strong>80%</strong></small>
+            <div class="progress" title="Готовність 80%"><span style="width:80%"></span></div>
+            <small style="color:var(--muted)">Готовність: <strong>80%</strong></small>
             <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1">Завантажити</a></div>
           </div>
         </article>
