--- a/index.html
+++ b/index.html
@@ -265,6 +265,23 @@
             </div>
           </div>
         </article>
+		
+		  <article class="card glass">
+          <div class="thumb">
+            <img src="assets/Ishin.webp">
+            <img class="logo" src="assets/Ishin.png">
+            <span class="badge">Збір на локалізацію</span>
+          </div>
+          <div class="content">
+            <h3>Like a Dragon: Ishin!</h3>
+            <p><strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Йде добровільний збір на локалізацію гри.</p>
+            <div class="progress" title="Готовність 0%"><span style="width:0%"></span></div>
+            <small style="color:var(--muted)">Статус: <strong>збір коштів</strong></small>
+            <div class="cta">
+              <a class="btn primary" href="https://donatello.to/LittleBitUA" target="_blank" rel="noopener">Спонсорувати</a>
+            </div>
+          </div>
+        </article>
 
         <article class="card glass">
           <div class="thumb">
