--- a/index.html
+++ b/index.html
@@ -184,6 +184,20 @@
     .visually-hidden{ position:absolute !important; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,1px,1px); white-space:nowrap; border:0 }
     .no-results{ margin:10px 0; padding:12px; border-radius:12px; background:rgba(239,68,68,.12); border:1px solid rgba(239,68,68,.35); color:#fecaca }
 
+  
+    /* Progress shimmer (minimal) */
+    .progress{ position:relative; overflow:hidden }
+    .progress > span{ position:relative; overflow:clip; contain:paint }
+    .progress > span::after{
+      content:""; position:absolute; inset:0;
+      background: linear-gradient(120deg, rgba(255,255,255,0) 45%, rgba(255,255,255,.25) 50%, rgba(255,255,255,0) 55%);
+      mix-blend-mode: screen; transform: translateX(-100%);
+      animation: sheen 2.6s linear infinite;
+      pointer-events: none;
+    }
+    @keyframes sheen{ to{ transform: translateX(100%) } }
+    @media (prefers-reduced-motion: reduce){ .progress > span::after{ animation:none } }
+    
   </style>
 </head>
 <body>
