--- a/index.html
+++ b/index.html
@@ -383,14 +383,14 @@
           <div class="thumb">
             <img src="assets/no_more_heroes_2.webp">
             <img class="logo" src="assets/no_more_heroes2_logo.png">
-            <span class="badge" data-i18n="badge_art_qa">У процесі малювання та тестування</span>
+            <span class="badge" data-i18n="badge_art_qa">Ранній доступ</span>
           </div>
           <div class="content">
             <h3>No More Heroes 2: Desperate Struggle</h3>
             <p data-i18n="nmh2_desc"><strong>Ще більше стилю та боїв!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
             <div class="progress" data-progress="100" title="Готовність 100%"><span style="width:100%"></span></div>
             <small style="color:var(--muted)" data-i18n-progress data-progress="100">Готовність: <strong>100%</strong></small>
-            <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1" data-i18n="btn_download">Завантажити</a></div>
+            <div class="cta"><a class="btn" href="https://t.me/LittleBitUA/95" target="_blank" rel="noopener" data-i18n="btn_download">Завантажити</a></div>
           </div>
         </article>
 
@@ -413,14 +413,14 @@
           <div class="thumb">
             <img src="assets/no_more_heroes_3.webp">
             <img class="logo" src="assets/no_more_heroes3_logo.png">
-            <span class="badge" data-i18n="badge_in_progress">У процесі локалізації</span>
+            <span class="badge" data-i18n="badge_in_progress">Ранній доступ</span>
           </div>
           <div class="content">
             <h3>No More Heroes 3</h3>
             <p data-i18n="nmh3_desc"><strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.</p>
             <div class="progress" data-progress="100" title="Готовність 100%"><span style="width:100%"></span></div>
             <small style="color:var(--muted)" data-i18n-progress data-progress="100">Готовність: <strong>100%</strong></small>
-            <div class="cta"><a class="btn disabled" href="#" aria-disabled="true" tabindex="-1" data-i18n="btn_download">Завантажити</a></div>
+            <div class="cta"><a class="btn" href="https://t.me/LittleBitUA/95" target="_blank" rel="noopener" data-i18n="btn_download">Завантажити</a></div>
           </div>
         </article>
       </div>
