--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <div class="thumb">
             <img src="assets/no_more_heroes_2.webp">
             <img class="logo" src="assets/no_more_heroes2_logo.png">
-            <span class="badge" data-i18n="badge_art_qa">Ранній доступ</span>
+            <span class="badge" data-i18n="badge_early_access">Ранній доступ</span>
           </div>
           <div class="content">
             <h3>No More Heroes 2: Desperate Struggle</h3>
@@ -413,7 +413,7 @@
           <div class="thumb">
             <img src="assets/no_more_heroes_3.webp">
             <img class="logo" src="assets/no_more_heroes3_logo.png">
-            <span class="badge" data-i18n="badge_in_progress">Ранній доступ</span>
+            <span class="badge" data-i18n="badge_early_access">Ранній доступ</span>
           </div>
           <div class="content">
             <h3>No More Heroes 3</h3>
@@ -471,8 +471,8 @@
 
         badge_in_progress: 'У процесі локалізації',
         badge_fundraising: 'Збір на локалізацію',
-        badge_art_qa: 'У процесі малювання та тестування',
 
+        badge_early_access: 'Ранній доступ',
         btn_download: 'Завантажити',
         btn_sponsor: 'Спонсорувати',
 
@@ -515,8 +515,8 @@
 
         badge_in_progress: 'In localization',
         badge_fundraising: 'Fundraising',
-        badge_art_qa: 'Art & QA in progress',
 
+        badge_early_access: 'Early Access',
         btn_download: 'Download',
         btn_sponsor: 'Sponsor',
 
