--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <h1 data-i18n="hero_title2">Грайте українською — відчувайте по-новому.</h1>
           <p class="lead" data-i18n="hero_lead">Улюблені історії — українською, від серця.</p>
           <div class="swatches" style="margin-top:10px">
-            <small style="color:var(--muted);margin-right:6px" data-i18n="accent_label">Акцент:</small>
+            <small style="color:var(--muted);margin-right:6px" data-i18n="accent_label">Стиль:</small>
             <button data-accent="violet" aria-label="Фіолетовий"></button>
             <button data-accent="emerald" aria-label="Смарагдовий"></button>
             <button data-accent="rose" aria-label="Рожевий"></button>
@@ -326,7 +326,7 @@
         btn_download:'Завантажити', btn_sponsor:'Спонсорувати', btn_view_projects:'До проєктів', btn_support:'Підтримати',
         status_fundraising:'Статус: <strong>збір коштів</strong>', raised_prefix:'Зібрано:', search_label:'Пошук проєкту', search_placeholder:'Пошук проєкту…',
         no_results:'Нічого не знайдено за цим запитом.', search_found:(n)=>`Знайдено: ${n}`, filter_all:'Усе', filter_in:'У процесі', filter_fund:'Збір коштів', filter_ea:'Ранній доступ',
-        stat_projects:'проєктів у переліку', stat_avg:'середня готовність', stat_early:'ранній доступ', accent_label:'Акцент:', rights:'Усі права захищено.' },
+        stat_projects:'проєктів у переліку', stat_avg:'середня готовність', stat_early:'ранній доступ', accent_label:'Стиль:', rights:'Усі права захищено.' },
       en:{ title:'“Little Bit” — Ukrainian Game Localizations', meta_desc:'“Little Bit” — Ukrainian localizations of video games: Judgment, Yakuza, No More Heroes.',
         nav_projects:'Our Projects', nav_contacts:'Contacts', nav_support:'Support Us', drawer_title:'Menu', drawer_label:'Mobile menu', open_menu:'Open menu', close_menu:'Close menu',
         pill_subtitle:'UA Localizations', hero_title2:'Play in Ukrainian — feel it anew.', hero_lead:'Your favorite stories — in Ukrainian, from the heart.',
