--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.png', status:'in-progress', progress:79,
         desc_uk:'<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.',
-        cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
+        cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/97',animated:true}},
       { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.png', status:'fundraising', progress:0, raised:3650, goal:25000,
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Йде добровільний збір на локалізацію гри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> We\'re raising funds for the localization.',
